# shasha

./: LICENSE  README.md  pyproject.toml
src/shasha/: __init__.py  decision_tree.py  decision_tree_reg.py  knn.py  linear_regression.py  logistic_regression.py  multiple_regression.py  random_forest.py  svm.py  xgb_classifier.py
src/shasha.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_decision_tree.py  test_knn.py  test_linear_regression.py  test_logistic_regression.py  test_multiple_regression.py  test_random_forest.py  test_svm.py  test_xgb_classifier.py
